--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
     <!-- Vendor js -->
-    <!-- <script src="../assets/js/vendor.min.js"></script> -->
+    <script src="../assets/js/vendor.min.js"></script>
 
     <!-- Plugins js-->
-    <!-- <script src="../assets/libs/flatpickr/flatpickr.min.js"></script> -->
-    <!-- <script src="../assets/libs/apexcharts/apexcharts.min.js"></script> -->
+    <script src="../assets/libs/flatpickr/flatpickr.min.js"></script>
+    <script src="../assets/libs/apexcharts/apexcharts.min.js"></script>
 
-    <!-- <script src="../assets/libs/selectize/js/standalone/selectize.min.js"></script> -->
+    <script src="../assets/libs/selectize/js/standalone/selectize.min.js"></script>
 
     <!-- Dashboar 1 init js-->
     <!-- <script src="../assets/js/pages/dashboard-1.init.js"></script> -->
